--- a/resource/database.properties
+++ b/resource/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/qlsv
+url=jdbc:mysql://localhost:3306/PatientManagement
 username=root
-password=nhatlong
+password=2005
