Giao Dien Thanh Toan Hoa Don

--- a/resources/message.properties
+++ b/resources/message.properties
@@ -1,72 +1,145 @@
 
 
--- Thêm d? li?u vào b?ng UserAccounts
-INSERT INTO UserAccounts (UserID, FullName, Role, Email, PhoneNumber, PasswordHash) VALUES
-('U001', 'Nguy?n V?n A', 'Bác s?', 'nguyenvana@example.com', '0987654321', 'hashed_password_1'),
-('U002', 'Tr?n Th? B', 'B?nh nhân', 'tranthib@example.com', '0976543210', 'hashed_password_2'),
-('U003', 'Lê V?n C', 'Qu?n lí', 'levanc@example.com', '0965432109', 'hashed_password_3');
+-- Insert data into Specialties table (Image 4 shows existing data)
+INSERT INTO Specialties (SpecialtyID, SpecialtyName)
+VALUES 
+  ('SPC-004', 'Da li\u1EC5u'),
+  ('SPC-005', 'Nhi khoa'),
+  ('SPC-006', 'S\u1EA3n ph\u1EE5 khoa'),
+  ('SPC-007', 'Tai m\u0169i h\u1ECDng'),
+  ('SPC-008', 'M\u1EAFt'),
+  ('SPC-009', 'R\u0103ng hàm m\u1EB7t'),
+  ('SPC-010', 'Ch\u1EA5n th\u01B0\u01A1ng ch\u1EC9nh hình');
 
--- Thêm d? li?u vào b?ng Specialties
-INSERT INTO Specialties (SpecialtyID, SpecialtyName) VALUES
-('S001', 'Tim m?ch'),
-('S002', 'N?i ti?t'),
-('S003', 'Nhi khoa');
-
--- Thêm d? li?u vào b?ng Doctors
-INSERT INTO Doctors (DoctorID, UserID, SpecialtyID, Address) VALUES
-('D001', 'U001', 'S001', '123 ???ng ABC, TP.HCM');
-
--- Thêm d? li?u vào b?ng Patients
-INSERT INTO Patients (PatientID, UserID, DateOfBirth, Gender, Address) VALUES
-('P001', 'U002', '1990-05-15', 'Nam', '456 ???ng XYZ, Hà N?i');
-
--- Thêm d? li?u vào b?ng Appointments
-INSERT INTO Appointments (AppointmentID, PatientID, DoctorID, AppointmentDate, Status, Notes) VALUES
-('A001', 'P001', 'D001', '2025-04-10 10:00:00', 'Ch?', 'Khám t?ng quát');
-
--- Thêm d? li?u vào b?ng Services
-INSERT INTO Services (ServiceID, ServiceName, Cost) VALUES
-('SV001', 'Khám s?c kh?e t?ng quát', 500000),
-('SV002', 'Siêu âm tim', 700000);
-
--- Thêm d? li?u vào b?ng Billing
-INSERT INTO Billing (BillID, PatientID, TotalAmount, PaymentMethod, Status) VALUES
-('B001', 'P001', 500000, 'Ti?n m?t', 'Ch?a thanh toán');
-
--- Thêm d? li?u vào b?ng BillingDetails
-INSERT INTO BillingDetails (BillID, ServiceID, Amount) VALUES
-('B001', 'SV001', 500000);
-
--- Thêm d? li?u vào b?ng MedicalRecords
-INSERT INTO MedicalRecords (RecordID, PatientID, DoctorID, Diagnosis, TreatmentPlan, RecordDate) VALUES
-('MR001', 'P001', 'D001', 'Huy?t áp cao', 'Theo dõi và ?i?u tr? b?ng thu?c', '2025-04-10');
-
--- Thêm d? li?u vào b?ng VitalSigns
-INSERT INTO VitalSigns (VitalSignID, PatientID, Temperature, BloodPressure, HeartRate, OxygenSaturation) VALUES
-('VS001', 'P001', 36.8, '120/80', 75, 98.0);
-
--- Thêm d? li?u vào b?ng Prescriptions
-INSERT INTO Prescriptions (PrescriptionID, PatientID, DoctorID, PrescriptionDate) VALUES
-('PR001', 'P001', 'D001', '2025-04-10');
-
--- Thêm d? li?u vào b?ng Medications
-INSERT INTO Medications (MedicationID, MedicineName, Description, Manufacturer, DosageForm, SideEffects) VALUES
-('M001', 'Paracetamol', 'Gi?m ?au h? s?t', 'D??c ph?m Vi?t Nam', 'Viên nén', 'Bu?n nôn, chóng m?t');
-
--- Thêm d? li?u vào b?ng PrescriptionDetails
-INSERT INTO PrescriptionDetails (PrescriptionID, MedicationID, Dosage, Instructions) VALUES
-('PR001', 'M001', '500mg', 'U?ng sau khi ?n');
+-- Insert data into UserAccounts table (Image 5 shows existing data)
+INSERT INTO UserAccounts (UserID, UserName, FullName, Role, Email, PhoneNumber, PasswordHash, CreatedAt)
+VALUES
+  ('USR-007', 'doctor2', 'Nguy\u1EC5n V\u0103n B\u1EA3o', 'Bác s\u0129', 'doctor3@hospital.com', '0903456789', 'SHA2(123, 256)', '2025-04-27 17:30:00'),
+  ('USR-008', 'doctor3', 'Ph\u1EA1m Th\u1ECB Hoa', 'Bác s\u0129', 'doctor4@hospital.com', '0912987654', 'SHA2(456, 256)', '2025-04-27 17:40:00'),
+  ('USR-009', 'doctor4', 'Tr\u1EA7n Qu\u1ED1c Khánh', 'Bác s\u0129', 'doctor5@hospital.com', '0945678912', 'SHA2(789, 256)', '2025-04-27 17:50:00'),
+  ('USR-010', 'patient3', 'Nguy\u1EC5n Th\u1ECB Lan', 'B\u1EC7nh nhân', 'patient3@example.com', '0987612345', 'SHA2(912, 256)', '2025-04-28 08:30:00'),
+  ('USR-011', 'patient4', 'Lê V\u0103n Hùng', 'B\u1EC7nh nhân', 'patient4@example.com', '0912345987', 'SHA2(234, 256)', '2025-04-28 09:15:00'),
+  ('USR-012', 'manager1', 'Hoàng Th\u1ECB Qu\u1EA3n Lý', 'Qu\u1EA3n lí', 'manager1@hospital.com', '0909876543', 'SHA2(567, 256)', '2025-04-28 10:00:00');
 
 
--- Thêm d? li?u vào b?ng Insurance
-INSERT INTO Insurance (InsuranceID, PatientID, Provider, PolicyNumber, StartDate, ExpirationDate, CoverageDetails, Status) VALUES
-('I001', 'P001', 'B?o hi?m ABC', 'BH123456', '2024-01-01', '2026-01-01', 'B?o hi?m y t? c? b?n', 'Ho?t ??ng');
 
--- Thêm d? li?u vào b?ng HospitalRooms
-INSERT INTO HospitalRooms (RoomID, RoomNumber, Type, Capacity, FloorNumber, Status) VALUES
-('R001', '101', 'Phòng ??n', 1, 1, 'Tr?ng');
+-- Insert data into Doctors table (Image 1 shows existing data)
+INSERT INTO Doctors (DoctorID, UserID, DateOfBirth, Gender, FullName, PhoneNumber, Email, Address, SpecialtyID, CreatedAt)
+VALUES
+  ('DOC-003', 'USR-007', '1982-03-12', 'Nam', 'Nguy\u1EC5n V\u0103n B\u1EA3o', '0903456789', 'doctor3@hospital.com', 'Hà N\u1ED9i', 'SPC-006', '2025-04-27 17:35:00'),
+  ('DOC-004', 'USR-008', '1987-11-25', 'N\u1EEF', 'Ph\u1EA1m Th\u1ECB Hoa', '0912987654', 'doctor4@hospital.com', '\u0110à N\u1EB5ng', 'SPC-004', '2025-04-27 17:45:00'),
+  ('DOC-005', 'USR-009', '1979-06-18', 'Nam', 'Tr\u1EA7n Qu\u1ED1c Khánh', '0945678912', 'doctor5@hospital.com', 'H\u1EA3i Phòng', 'SPC-005', '2025-04-27 17:55:00');
 
--- Thêm d? li?u vào b?ng Admissions
-INSERT INTO Admissions (AdmissionID, PatientID, DoctorID, RoomID, AdmissionDate, Notes) VALUES
-('AD001', 'P001', 'D001', 'R001', '2025-04-10', 'Nh?p vi?n ?? theo dõi huy?t áp cao');
+-- Insert data into DoctorSchedule table (Image 2 shows existing data)
+INSERT INTO DoctorSchedule (DoctorID, DayOfWeek, ShiftType, Status)
+VALUES
+  ('DOC-003', 'Th\u1EE9 Hai', 'Sáng', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-003', 'Th\u1EE9 Ba', 'Chi\u1EC1u', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-003', 'Th\u1EE9 B\u1EA3y', 'T\u1ED1i', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-004', 'Th\u1EE9 Hai', 'Chi\u1EC1u', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-004', 'Th\u1EE9 T\u01B0', 'T\u1ED1i', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-004', 'Th\u1EE9 Sáu', 'Sáng', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-005', 'Th\u1EE9 Ba', 'T\u1ED1i', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-005', 'Th\u1EE9 N\u0103m', 'Sáng', '\u0110ang làm vi\u1EC7c'),
+  ('DOC-005', 'Ch\u1EE7 Nh\u1EADt', 'Chi\u1EC1u', '\u0110ang làm vi\u1EC7c');
 
+-- Insert data into Patients table (Image 3 shows existing data)
+INSERT INTO Patients (PatientID, UserID, FullName, DateOfBirth, Gender, PhoneNumber, Address, CreatedAt)
+VALUES
+  ('PAT-003', 'USR-010', 'Nguy\u1EC5n Th\u1ECB Lan', '1988-04-22', 'N\u1EEF', '0987612345', 'Hà N\u1ED9i', '2025-04-28'),
+  ('PAT-004', 'USR-011', 'Lê V\u0103n Hùng', '1975-09-30', 'Nam', '0912345987', '\u0110à N\u1EB5ng', '2025-04-28');
+
+-- Insert data into Services table
+INSERT INTO Services (ServiceID, ServiceName, Cost)
+VALUES
+  ('SRV-001', 'Khám t\u1ED5ng quát', 300000),
+  ('SRV-002', 'Xét nghi\u1EC7m máu', 250000),
+  ('SRV-003', 'Ch\u1EE5p X-quang', 500000),
+  ('SRV-004', 'Siêu âm', 450000),
+  ('SRV-005', 'N\u1ED9i soi', 800000),
+  ('SRV-006', 'Khám chuyên khoa', 400000),
+  ('SRV-007', 'Tiêm vaccine', 350000),
+  ('SRV-008', 'T\u01B0 v\u1EA5n dinh d\u01B0\u1EE1ng', 200000);
+
+-- Insert data into HospitalRooms table
+INSERT INTO HospitalRooms (RoomID, RoomType, TotalBeds, AvailableBeds, FloorNumber, Status)
+VALUES
+  ('ROOM-001', 'Tiêu chu\u1EA9n', 4, 2, 1, '\u0110ang s\u1EED d\u1EE5ng'),
+  ('ROOM-002', 'Tiêu chu\u1EA9n', 4, 1, 1, '\u0110ang s\u1EED d\u1EE5ng'),
+  ('ROOM-003', 'VIP', 2, 1, 2, '\u0110ang s\u1EED d\u1EE5ng'),
+  ('ROOM-004', 'VIP', 2, 2, 2, 'Tr\u1ED1ng'),
+  ('ROOM-005', 'ICU', 3, 1, 3, '\u0110ang s\u1EED d\u1EE5ng'),
+  ('ROOM-006', 'C\u1EA5p c\u1EE9u', 5, 3, 1, '\u0110ang s\u1EED d\u1EE5ng');
+
+-- Insert data into Medications table
+INSERT INTO Medications (MedicationID, MedicineName, Description, Manufacturer, DosageForm, SideEffects)
+VALUES
+  ('MED-001', 'Paracetamol', 'Thu\u1ED1c gi\u1EA3m \u0111au, h\u1EA1 s\u1ED1t', 'Công ty D\u01B0\u1EE3c ph\u1EA9m A', 'Viên nén', 'Bu\u1ED3n nôn, phát ban'),
+  ('MED-002', 'Amoxicillin', 'Kháng sinh', 'Công ty D\u01B0\u1EE3c ph\u1EA9m B', 'Viên nang', 'Tiêu ch\u1EA3y, phát ban'),
+  ('MED-003', 'Omeprazole', 'Thu\u1ED1c \u0111i\u1EC1u tr\u1ECB \u0111au d\u1EA1 dày', 'Công ty D\u01B0\u1EE3c ph\u1EA9m C', 'Viên nén', '\u0110au \u0111\u1EA7u, tiêu ch\u1EA3y'),
+  ('MED-004', 'Losartan', 'Thu\u1ED1c \u0111i\u1EC1u tr\u1ECB cao huy\u1EBFt áp', 'Công ty D\u01B0\u1EE3c ph\u1EA9m D', 'Viên nén', '\u0110au \u0111\u1EA7u, chóng m\u1EB7t'),
+  ('MED-005', 'Metformin', 'Thu\u1ED1c \u0111i\u1EC1u tr\u1ECB ti\u1EC3u \u0111\u01B0\u1EDDng', 'Công ty D\u01B0\u1EE3c ph\u1EA9m E', 'Viên nén', 'Bu\u1ED3n nôn, tiêu ch\u1EA3y');
+
+-- Insert data into Appointments table
+INSERT INTO Appointments (AppointmentID, PatientID, DoctorID, AppointmentDate, Status, Notes)
+VALUES
+  ('APP-001', 'PAT-001', 'DOC-001', '2025-04-30 09:00:00', 'Ch\u1EDD xác nh\u1EADn', 'Khám t\u1ED5ng quát'),
+  ('APP-002', 'PAT-002', 'DOC-002', '2025-04-30 10:30:00', 'Ch\u1EDD xác nh\u1EADn', 'Khám chuyên khoa'),
+  ('APP-003', 'PAT-003', 'DOC-003', '2025-05-01 14:00:00', 'Ch\u1EDD xác nh\u1EADn', 'Tái khám'),
+  ('APP-004', 'PAT-004', 'DOC-004', '2025-05-02 08:30:00', 'Ch\u1EDD xác nh\u1EADn', 'Khám l\u1EA7n \u0111\u1EA7u');
+
+-- Insert data into Billing table
+INSERT INTO Billing (BillID, PatientID, TotalAmount, PaymentMethod, Status, CreatedAt)
+VALUES
+  ('BIL-001', 'PAT-001', 750000, 'Ti\u1EC1n m\u1EB7t', '\u0110ã thanh toán', '2025-04-30 11:30:00'),
+  ('BIL-002', 'PAT-002', 850000, 'Chuy\u1EC3n kho\u1EA3n', '\u0110ã thanh toán', '2025-04-30 12:45:00');
+
+-- Insert data into BillingDetails table
+INSERT INTO BillingDetails (BillID, ServiceID, Amount)
+VALUES
+  ('BIL-001', 'SRV-001', 300000),
+  ('BIL-001', 'SRV-002', 250000),
+  ('BIL-001', 'SRV-008', 200000),
+  ('BIL-002', 'SRV-001', 300000),
+  ('BIL-002', 'SRV-004', 450000),
+  ('BIL-002', 'SRV-008', 100000);
+
+-- Insert data into MedicalRecords table
+INSERT INTO MedicalRecords (RecordID, PatientID, DoctorID, Diagnosis, TreatmentPlan, RecordDate, IsHistory)
+VALUES
+  ('MR-001', 'PAT-001', 'DOC-001', 'Viêm h\u1ECDng', 'U\u1ED1ng thu\u1ED1c kháng sinh và ngh\u1EC9 ng\u01A1i', '2025-04-30', FALSE),
+  ('MR-002', 'PAT-002', 'DOC-002', '\u0110au l\u01B0ng', 'V\u1EADt lý tr\u1ECB li\u1EC7u và thu\u1ED1c gi\u1EA3m \u0111au', '2025-04-30', FALSE);
+
+-- Insert data into VitalSigns table
+INSERT INTO VitalSigns (VitalSignID, PatientID, Temperature, BloodPressure, HeartRate, OxygenSaturation, RecordedAt)
+VALUES
+  ('VS-001', 'PAT-001', 37.2, '120/80', 72, 98.5, '2025-04-30 09:15:00'),
+  ('VS-002', 'PAT-002', 36.8, '130/85', 75, 97.8, '2025-04-30 10:45:00');
+
+-- Insert data into Prescriptions table
+INSERT INTO Prescriptions (PrescriptionID, PatientID, DoctorID, PrescriptionDate)
+VALUES
+  ('PRE-001', 'PAT-001', 'DOC-001', '2025-04-30'),
+  ('PRE-002', 'PAT-002', 'DOC-002', '2025-04-30');
+
+-- Insert data into PrescriptionDetails table
+INSERT INTO PrescriptionDetails (PrescriptionID, MedicationID, Dosage, Instructions)
+VALUES
+  ('PRE-001', 'MED-001', '500mg', 'U\u1ED1ng 1 viên m\u1ED7i 6 gi\u1EDD khi \u0111au ho\u1EB7c s\u1ED1t'),
+  ('PRE-001', 'MED-002', '500mg', 'U\u1ED1ng 1 viên m\u1ED7i 8 gi\u1EDD sau b\u1EEFa \u0103n'),
+  ('PRE-002', 'MED-001', '500mg', 'U\u1ED1ng 1 viên m\u1ED7i 6 gi\u1EDD khi \u0111au'),
+  ('PRE-002', 'MED-003', '20mg', 'U\u1ED1ng 1 viên m\u1ED7i sáng tr\u01B0\u1EDBc b\u1EEFa \u0103n');
+
+-- Insert data into Insurance table
+INSERT INTO Insurance (InsuranceID, PatientID, Provider, PolicyNumber, StartDate, ExpirationDate, CoverageDetails, Status)
+VALUES
+  ('INS-001', 'PAT-001', 'B\u1EA3o hi\u1EC3m Y t\u1EBF Qu\u1ED1c gia', 'BHYT12345678', '2025-01-01', '2025-12-31', 'B\u1EA3o hi\u1EC3m y t\u1EBF c\u01A1 b\u1EA3n', 'Ho\u1EA1t \u0110\u1ED9ng'),
+  ('INS-002', 'PAT-002', 'B\u1EA3o hi\u1EC3m Quân \u0111\u1ED9i', 'BHQD87654321', '2025-02-01', '2026-01-31', 'B\u1EA3o hi\u1EC3m toàn di\u1EC7n', 'Ho\u1EA1t \u0110\u1ED9ng'),
+  ('INS-003', 'PAT-003', 'B\u1EA3o hi\u1EC3m Xã h\u1ED9i', 'BHXH98765432', '2025-03-01', '2026-02-28', 'B\u1EA3o hi\u1EC3m c\u01A1 b\u1EA3n', 'Ho\u1EA1t \u0110\u1ED9ng'),
+  ('INS-004', 'PAT-004', 'B\u1EA3o hi\u1EC3m Prudential', 'PRU12345678', '2025-01-15', '2026-01-14', 'B\u1EA3o hi\u1EC3m s\u1EE9c kh\u1ECFe cao c\u1EA5p', 'Ho\u1EA1t \u0110\u1ED9ng');
+
+-- Insert data into Admissions table
+INSERT INTO Admissions (AdmissionID, PatientID, DoctorID, RoomID, AdmissionDate, DischargeDate, Notes)
+VALUES
+  ('ADM-001', 'PAT-001', 'DOC-001', 'ROOM-001', '2025-04-30', NULL, 'Nh\u1EADp vi\u1EC7n \u0111\u1EC3 theo dõi'),
+  ('ADM-002', 'PAT-002', 'DOC-002', 'ROOM-003', '2025-04-30', NULL, 'Nh\u1EADp vi\u1EC7n \u0111\u1EC3 \u0111i\u1EC1u tr\u1ECB');
